TheKabal (16 November 2013)
--------------------------------------
The new player signup process is substantially redone. New users choose their own password, we send a welcome letter with resources, we log the user in securely, and we transfer the user into the game directly.

TheKabal (15 November 2013)
--------------------------------------
Change the new player page template to better match the style of index.

TheKabal (13 November 2013)
--------------------------------------
Update to move the loading of adodb's session2 out of global_includes, and into the classmap composer config. Also updating using php composer.phar update -o from now on.

TheKabal (10 November 2013)
--------------------------------------
Admin password should not be able to be set to reset within the game
mt_rand is not the best source for strong random numbers. Where available, we now use either openssl or mcrypt as rand sources. If they aren't we fall back to mt_rand.
Fixes for standalone CSS throughout the game - All pages now pull the correct CSS for their page

TheKabal (27 October 2013)
--------------------------------------
Removed dozens of global variables that were not needed any more
Moved all instances of $local_number_dec_point and $local_number_thousands_sep to be pulled from $langvars, regional
Removed local_number_dec_point and local_number_thousands_sep from config - less variables, yay!
Cleaned up assorted PHP warnings and glitches

TheKabal (10 October 2013)
--------------------------------------
BntDb::logDbErrors replaces DbOp::dbResult

TheKabal (10 October 2013)
--------------------------------------
Moving images into templates

TheKabal (6 October 2013)
--------------------------------------
All check login calls need the template to be passed to it, or else "you need to login" display is broken
Redo "header.php" to also be template driven, to be used until a file is switched to use layout.tpl